--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: yota22721.github.io # the subpath of your site, e.g. /blog
 url: https://yota22721.github.io # the base hostname & protocol for your site, e.g. http://example.com
+domain: yota22721.github.io
 twitter_username: yota0x86
 github_username:  yota22721
 
