--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ github_username:  yota22721
 theme: minima
 plugins:
   - jekyll-feed
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
