--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 theme = "paper"
-baseURL = 'http://example.org/'
+baseURL = 'https://yota22721.github.io/'
 languageCode = 'en-us'
 title = 'Youtai'
 
