--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 theme = "paper"
 baseURL = "https://yota22721.github.io/"
 languageCode = 'en-us'
-title = 'YouTai'
+title = 'Yota blog'
 
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
@@ -16,7 +16,7 @@ home = [ "HTML", "RSS", "JSON"]
 
 	#home page profile
 	avatar = "https://avatars.githubusercontent.com/u/89376495?v=4"
-	name = 'youtai'
+	name = 'Yota'
 	bio = 'Security enthusiast'
 
 	#misc
